# WusaBypassUAC

./: README.md
comctl32/: CMakeLists.txt  README.txt  comctl32.h  dllmain.cpp
snaps/: README.txt
src/: CMakeLists.txt  README.txt  comctl32.cpp  comctl32.h  main.cpp  stdafx.cpp  stdafx.h  wusauacbypass.h
